# Share-the-bill-2.0

./: CMakeLists.txt  Category.cpp  Category.h  Debt.cpp  Debt.h  EqualExpense.cpp  EqualExpense.h  Expense.cpp  Expense.h  Group.cpp  Group.h  Meniu.cpp  PercentageExpense.cpp  PercentageExpense.h  Settlement.cpp  Settlement.h  User.cpp  User.h  main.cpp  meniu.h  test.txt
